--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,11 +38,12 @@
 <body class="loading nosessions">
     <loading-bar></loading-bar>
     <div id="title">
-        <h1>welcome to <img src="img/logo.svg"></h1>
+        <div style="float:left; text-align: left;margin-left: 0.5em;">
+        <h2>Welcome to <img src="img/logo.svg"></h2>
+        <p>Open a <a href="sample">sample notebook</a></p>
+        </div>  
         <main>
-            <p>New session:</p>
             <ul id="new">
-                <li>Open a <a href="sample">sample notebook</a></li>
                 <li>Create a <a href="new">new notebook</a></li>
                 <li>
                     Open from file:
