--- a/frontend/index.html
+++ b/frontend/index.html
@@ -39,7 +39,7 @@
     <loading-bar></loading-bar>
     <div id="title">
         <div style="float:left; text-align: left;margin-left: 0.5em;">
-        <h2>Welcome to <img src="img/logo.svg"></h2>
+        <h2><img src="img/logo.svg"></h2>
         <p>Open a <a href="sample">sample notebook</a></p>
         </div>  
         <main>
